# goalAFlow

./: README.md  feature_list.json  pyproject.toml  requirements.txt
configs/: default.yaml
goalflow/: __init__.py  config.py
goalflow/data/: __init__.py
goalflow/models/: __init__.py  goal_flow_model.py
goalflow/models/goal/: __init__.py  goal_module.py  goal_scorer.py  goal_selector.py  goal_vocabulary.py
goalflow/models/perception/: __init__.py  transfuser.py
goalflow/models/planning/: __init__.py  rectified_flow.py  trajectory_decoder.py  trajectory_planner.py  trajectory_scorer.py
goalflow/scripts/: evaluate.py  train.py
goalflow/utils/: __init__.py  geometry.py  metrics.py
