[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "goalflow"
version = "0.1.0"
description = "GoalFlow: Goal-Driven Flow Matching for Multimodal Trajectory Generation"
authors = [
    {name = "GoalFlow Team"}
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "pytorch-lightning>=2.0.0",
    "pyyaml>=6.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "Pillow>=10.0.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "tensorboard>=2.14.0",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100
